OLMIS-1726 Update maxStock and minStock names to include periods
Update maxStock to maxPeriodsOfStock and minStock to minPeriodsOfStock. It's more descriptive and less confusing for developers.

--- a/src/main/webapp/common/facility-approved-product-table.scss
+++ b/src/main/webapp/common/facility-approved-product-table.scss
@@ -18,7 +18,7 @@
   .col-action {
     min-width: 125px;
   }
-  .col-max-stock, .col-min-stock, .col-eop {
+  .col-max-periods-stock, .col-min-periods-stock, .col-eop {
     min-width: 60px;
     max-width: 125px;
     input[type="text"] {
