--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustment.scss
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustment.scss
@@ -1,63 +1,23 @@
-.adjustment-list {
-max-height: 15em;
-  margin-top: 1em;
-  overflow: auto;
-  border: 0.1em solid $medium-gray;
-  background: $very-light-gray;
-  ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    li {
-      border-top: 0.1em solid $light-gray;
-      &:first-child {
-        border-top: 0 none;
-      }
-    }
-  }
-}
-
-.adjustment {
+.losses-and-adjustments {
     display: flex;
-    flex-wrap: wrap;
-    * {
-        margin: 0.5em 1em 0.5em 2em;
-    }
-    label {
-        flex: 2 0 5em;
-        line-height: 2.5em;
+    font-weight: bold;
+    width: 100%;
+
+    &::before {
+        content: '\f044';
+        font-family: 'FontAwesome';
         font-weight: normal;
+        margin-right: auto;
     }
-    input {
-        flex: 1 0 5em;
-        text-align: right;
+
+    &:hover {
+        text-decoration: none;
     }
-}
 
-.rnr-adjustment {
-  padding: 0 0.5em;
-  display: block;
-  line-height: 2em;
-  text-align: right;
-  background: url(../images/edit-icon.png) no-repeat 0.5em center;
-  font-weight: bold;
-}
+    &.disabled {
 
-.adjustment-total {
-  padding: 0.6em 2.5em 0.6em 0.6em;
-  margin: 0.5em 0 0;
-  border-radius: 0;
-  border-color: $red;
-  font-size: 1.2em;
-  font-weight: bold;
-  text-align: right;
-  background-color: $background-color-alt;
-}
-
-.adjustment-warning {
-  padding: 0.6em 2.5em 0.6em 0.6em;
-  margin: 0.5em 0 0;
-  font-size: 1.2em;
-  font-weight: bold;
-  text-align: left;
+        &::before {
+            content: '\f08e';
+        }
+    }
 }
