OLMIS-1642: Updated base layout
Re-worked layout of page around button pattern

--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -100,14 +100,15 @@ button {
 
 .btn,
 .btn-default,
-a.button,
 input[type=submit],
 input[type=button] {
   @extend button;
-  &a {
+}
 
-  }
-  &a:hover{
+a.btn,
+a.button {
+  @extend button;
+  &:hover {
     text-decoration: none;
   }
 }
