--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -16,6 +16,10 @@ $black: #000000;
 $shadow: rgba($black, 0.75);
 $light-shadow: rgba($black, 0.075);
 
+$font-size: 14px;
+$font-size-large: 16px;
+$font-size-extra-large: 22px;
+
 $brand-primary: $heading-green;
 
 $background-color: $white;
