--- a/src/main/webapp/common/button.mixins.scss
+++ b/src/main/webapp/common/button.mixins.scss
@@ -10,11 +10,13 @@
 
 @mixin button($color){
     display: block;
-    padding: $space-size/2 $space-size;
+    padding: 0.5em 1em;
 
     border-radius: $border-radius;
-    border-color: $color;
-    border-width: 1px;
+    border-top: $color 1px solid;
+    border-right: $color 1px solid;
+    border-left: $color 1px solid;
+    border-bottom: $color 1px solid;
 
     $button-text-color: $white;
     @if (lightness($color) > 70) {
