--- a/src/main/webapp/common/headers.scss
+++ b/src/main/webapp/common/headers.scss
@@ -18,6 +18,20 @@ Styleguide 1.1
 */
 
 h1, h2, h3, h4, h5, h6{
+	color: $heading-green;
 	display: block;
 	clear: both;
+	font-weight: normal;
+	font-size: $font-size-large;
+	line-height: 1.6em;
+	margin: 0px;
+}
+
+h1, h2 {
+  font-size: $font-size-extra-large;
+  line-height: 1.6em;
+}
+
+h1, h3{
+	font-weight: bold;
 }
