--- a/src/main/webapp/common/headers.scss
+++ b/src/main/webapp/common/headers.scss
@@ -22,14 +22,14 @@ h1, h2, h3, h4, h5, h6{
 	display: block;
 	clear: both;
 	font-weight: normal;
-	font-size: $font-size-large;
-	line-height: 1.6em;
+	font-size: $font-size;
+	line-height: 1.2em;
 	margin: 0px;
 }
 
 h1, h2 {
-  font-size: $font-size-extra-large;
-  line-height: 1.6em;
+  font-size: $font-size-large;
+  line-height: 1.2em;
 }
 
 h1, h3{
