--- a/src/main/webapp/requisition-summary/requisition-summary.scss
+++ b/src/main/webapp/requisition-summary/requisition-summary.scss
@@ -8,7 +8,7 @@ aside.requisition-summary {
     @include clearfix();
     display: flex;
     flex-direction: row;
-    align-items: baseline;
+    align-items: center;
     > * {
         display: block;
         flex: 1 0 auto;
