--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.scss
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.scss
@@ -4,4 +4,9 @@
         flex-direction: row-reverse;
     }
 
+    .hide-line-item {
+    	@extend button.danger;
+    	@include icon-only('remove');
+    }
+
 }
