--- a/src/main/webapp/openlmis-form/select-search-option.scss
+++ b/src/main/webapp/openlmis-form/select-search-option.scss
@@ -3,6 +3,7 @@
     .list-label {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 1em;
     }
 
     .option-button {
@@ -11,7 +12,7 @@
         display: flex;
         align-content: flex-start;
         width: 100%;
-        margin-top: 1em;
+        margin-bottom: 1em;
     }
 
     input {
