OLMIS-1354: added sorting controlls to approval list screen

--- a/src/main/webapp/openlmis-table/openlmis-table-container.scss
+++ b/src/main/webapp/openlmis-table/openlmis-table-container.scss
@@ -165,3 +165,11 @@ Styleguide 4.1
         margin-top: 1em;
     }
 }
+
+button.descending {
+	@include button-icon-only('sort-amount-desc');
+}
+
+button.ascending {
+	@include button-icon-only('sort-amount-asc');
+}
