--- a/src/main/webapp/openlmis-table/openlmis-table-container.scss
+++ b/src/main/webapp/openlmis-table/openlmis-table-container.scss
@@ -151,7 +151,7 @@ Styleguide 4.1
     width: $sidebar-width;
 
     & + .openlmis-table {
-        padding-left: 0.5em;
+        margin-left: 0.5em;
     }
 }
 
