OLMIS-1642: Added form-inline class

--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -178,3 +178,10 @@ input[type="color"]:focus,
         color: black;
     }
 }
+
+form.form-inline{
+  > * {
+    display: block-inline;
+    margin-right: 0.5em;
+  }
+}
