--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -1,11 +1,20 @@
 .page aside {
   @include clearfix();
+  position: relative;
+
   padding: 1em;
   margin-bottom: 1em;
+  
   @include box-shadow(0.2em 0.2em 0 $light-shadow);
   border: 0.1em solid $medium-gray;
   background: $very-light-gray;
   text-shadow: 0 0.1em 0 white;
+
+  > button.close {
+    position: absolute;
+    top: 0em;
+    right: 0em;
+  }
 
   dl {
     display: flex;
@@ -30,16 +39,5 @@
       padding-right: 0;
     }
   }
-
-  // button{
-  //   @extend .pull-right;
-  // }
-
-  // h1, h2, h3, h4{
-  //   font-size: 1.5em;
-  //   float: left;
-  //   clear: left;
-  //   margin: 0px;
-  // }
 
 }
