--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -9,34 +9,27 @@ in comparison with their enabled equivalents. They usually contain text, but
 may also consist of the image and text.
 
 Buttons should marked up using semantic HTML, where the HTML element is button.
-An exception to this is the primary action of a form, which would be an `input`
-element with the type "submit". Styling `<a>` elements with `.btn` is possible,
-but is considered bad form.
 
+*Note:* `<input type="submit" />` and `<input type="button" />` elements will also be styled as buttons.
+
+### Button Groups
 Buttons that change the state of an object or screen in the UI should always be
 on the right side of the screen. All other buttons should be pulled to the left.
-There should only be a single primary button per screen or pane. 
+There should only be a single primary button per screen or pane.
+
+<div class="button-group">
+  <button type="button">Default Button</button>
+  <button disabled="true" type="button">Default Button</button>
+  <button class="primary" type="button">Default Button</button>
+  <button class="danger" type="button">Default Button</button>
+</div> 
 
 Button groups are semantic grouping of actions for a specific task or item, if 
 buttons don't act on the same object, they should not be grouped together. 
 Unless marked as part of a button group, all buttons are block level and take
 up their own vertical space.
 
-Only add icons to buttons through CSS. All buttons must have text that is
-accessiable by a screen reader, see button grammar guidelines for rules about
-how button text should be phrased.
-
-
-markup:
-<button type="button">Default Button</button>
-<br />
 <div class="button-group">
-  <input type="submit" value="Primary Button"/>
-  <button>Cancel Button</button>
-</div>
-<br />
-<div class="button-group">
-  <a class="button" href="">Link Button</a>
   <div class="button-group primary">
     <button class="primary">Primary Button</button>
     <button class="danger">Delete Button</button>
@@ -49,6 +42,18 @@ markup:
     <button>Another Action</button>
   </div>
 </div>
+
+### Close Button
+<aside>
+  <button class="close">Close</button>
+  The only exception to these rules is the close button that must always be shown
+  in the right hand corner of popovers and modal windows (if they are closable).
+</aside>
+
+### Button Icons
+Only add icons to buttons through CSS. All buttons must have text that is
+accessiable by a screen reader, see button grammar guidelines for rules about
+how button text should be phrased. See `button.close` for an example.
 
 Styleguide 1.3
 */
@@ -68,24 +73,21 @@ button {
   }
 }
 
+button.close {
+  @include button-icon-only("times");
+  background: transparent;
+  color: $text-color;
+}
+
 .button-group {
   @extend .clearfix;
+  margin: 0em -0.5em;
 
   > *,
   > button {
     display: block;
-    margin-right: $space-size/2;
+    margin: 0px 0.5em;
     float: left;
-  }
-
-  > button.primary {
-    margin-right: 0px;
-    margin-left: $space-size/2;
-  }
-
-  > a {
-    padding-top: $space-size/2;
-    padding-bottom: $space-size/2;
   }
 
   > .button-group.primary,
@@ -93,22 +95,21 @@ button {
     float: right;
   }
 
+  > a {
+    padding: 0.5em 0em;
+  }
+
   > .button-group {
     margin: 0px;
   }
 }
 
+.btn,
 input[type=button] {
   @extend button;
 }
 
-a.button {
-  @extend button;
-  &:hover {
-    text-decoration: none;
-  }
-}
-
+.btn-primary,
 input[type=submit] {
   @extend button.primary;
 }
