--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -31,6 +31,8 @@ $table-border-color: $gray;
 
 $icon-font-path: 'fonts/';
 
+$text-shadow-size: 5px;
+
 $border-radius: 4px;
 $border-radius-base: $border-radius;
 $border-radius-large: $border-radius;
