--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -103,7 +103,7 @@ form {
     margin: 0.2em 0px;
 	}
 
-  fieldset{
+  > fieldset{
     margin: 0.5em 0em;
     &.form-group {
       margin: 0em;
@@ -169,13 +169,14 @@ form {
     border-color: $light-gray;
     border-style: solid;
     border-radius: $border-radius;
-    box-shadow: inset 0 0 0.2em $light-gray;
+    box-shadow: inset 0 0 0.5em $light-gray;
     &:focus {
       border-color: $brand-primary;
-      box-shadow: inset 0 0 0.2em $brand-primary;
+      box-shadow: inset 0 0 0.5em $brand-primary;
     }
     &:disabled {
       box-shadow: 0 0 0 $light-gray;
+      background-color: $light-gray;
       color: $gray;
     }
   }
@@ -190,6 +191,11 @@ form .form-group {
 
 textarea {
   resize: none;
+}
+
+input.number,
+input[type="number"] {
+  text-align: right;
 }
 
 .ng-submitted {
@@ -212,9 +218,3 @@ textarea {
     }
 }
 
-form.form-inline{
-  > * {
-    display: block-inline;
-    margin-right: 0.5em;
-  }
-}
