--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.scss
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.scss
@@ -3,6 +3,7 @@
     & > form {
         border-bottom: 1px solid $light-gray;
         margin-bottom: 1em;
+        padding-bottom: 0.5em;
     }
 
     & > dl {
