--- a/src/main/webapp/openlmis-login/login.scss
+++ b/src/main/webapp/openlmis-login/login.scss
@@ -1,54 +1,12 @@
 
 .login-container {
   background-image: linear-gradient(to bottom, $white 0%, $white 48%, $light-gray 100%);
-  border-radius: 0.3em;
-  h1 {
-    font-size: 1.3em;
+  border-radius: $border-radius;
+
+  .powered-by {
+    text-align: right;
+    padding: 0px 1em;
     color: $gray;
-    margin: 0;
-    line-height: 1.5em;
-    text-shadow: 0 0.1em 0 $white;
-    font-weight: normal;
-    border-color: transparent;
-    font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
-  }
-  h2 {
-    font-size: 1.4em;
-    color: $dark-gray;
-    margin: 0;
-    padding: 0.8em 0;
-    line-height: 1.5em;
-    border-color: transparent;
-  }
-  .is-error {
-    font-size: 0.9em;
-    line-height: 1.5em;
-    border-color: $red;
-  }
-  form {
-    margin: 0;
-  }
-  input:focus:required:invalid:focus {
-    border-color: $heading-green;
-    box-shadow: inset 0 0.1em 0.1em $light-shadow, 0 0 0.5em rgba($cyan, 0.6);
-  }
-  input {
-    &[type='text'], &[type='password'] {
-      width: 95%;
-      margin-bottom: 1.5em;
-    }
-    &.btn {
-      font-size: 1.15em;
-      margin-bottom: 1em;
-      &.btn-primary {
-        float: right;
-        margin-right: 1em;
-        }
-    }
-  }
-  a {
-    font-size: 1em;
-    text-decoration: underline;
   }
 }
 
@@ -56,29 +14,6 @@
   background: url(../images/login-bg.png) no-repeat 1.5em top;
   padding: 0 4em 0 23.5em;
   min-height: 22em;
-}
-
-.forgot-link {
-  padding: 1em 0 1.5em;
-}
-
-.form-desc {
-  padding-bottom: 15px;
-}
-
-.or-row {
-  padding: 0 0 12px 3px;
-}
-
-.powered-by {
-  text-align: right;
-  padding: 0px 1em;
-  font-size: 0.7em;
-  color: $gray;
-}
-
-input[placeholder].placeholder {
-  color: $medium-gray;
 }
 
 .modal-login-header {
@@ -95,29 +30,14 @@ input[placeholder].placeholder {
   > .locale-container{
     flex: 0 0 auto;
   }
-}
 
-.locale-container {
-  @extend .list-unstyled;
-  font-size: $font-size-small;
-  li {
-    display: block;
-    float: left;
-    a {
-      color: $brand-primary;
-    }
-    .selected {
-      color: $text-color;
-      text-decoration: none;
-    }
-    &::after{
-      content: "|";
-      padding-right: 0.5em;
-    }
-    &:last-child::after{
-      content: "";
-      padding: 0em;
-    }
+  > h1 {
+    color: $text-color;
+    text-shadow: 0 0.1em 0 $white;
+    font-weight: normal;
+    border-color: transparent;
+    font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
+    padding: 0px;
   }
 }
 
