--- a/src/main/webapp/openlmis-modal/modal.scss
+++ b/src/main/webapp/openlmis-modal/modal.scss
@@ -10,6 +10,10 @@
 	.modal-header{
 		background-color: $background-color-alt;
 		color: $brand-primary;
+		> h1, h2, h3, h4, h5, h6 {
+			padding: 0px;
+			font-weight: bold;
+		}
 	}
 
 	.modal-footer{
