OLMIS-1771: Changed languages to a dropdown

--- a/src/main/webapp/openlmis-locale/locale-list.scss
+++ b/src/main/webapp/openlmis-locale/locale-list.scss
@@ -1,23 +1,5 @@
 .locale-container {
-  @extend .list-unstyled;
   font-size: $font-size-small;
-  li {
-    display: block;
-    float: left;
-    a {
-      color: $brand-primary;
-    }
-    .selected {
-      color: $text-color;
-      text-decoration: none;
-    }
-    &::after{
-      content: "|";
-      padding-right: 0.5em;
-    }
-    &:last-child::after{
-      content: "";
-      padding: 0em;
-    }
-  }
+  width: 10em;
+  height: 2.5em;
 }
