OLMIS-1771: Fix navbar height

--- a/src/main/webapp/openlmis-navigation/navigation.scss
+++ b/src/main/webapp/openlmis-navigation/navigation.scss
@@ -108,7 +108,7 @@ header > .navbar {
     position: relative;
   }
   .navbar-right{
-    @extend .navbar-text;
+    margin-top: 10px;
     margin-right: 0em;
   }
 
