--- a/src/main/webapp/openlmis-form/select.scss
+++ b/src/main/webapp/openlmis-form/select.scss
@@ -73,9 +73,7 @@ select{
 	}
 }
 
-select.pop-out {
-
-	option {
-		display: none;
-	}
+select.pop-out:disabled {
+	box-shadow: inset 0 0 0.5em #ddd;
+	background-color: #fff;
 }
