--- a/src/main/webapp/openlmis-login/login.scss
+++ b/src/main/webapp/openlmis-login/login.scss
@@ -14,6 +14,11 @@
   background: url(../images/login-bg.png) no-repeat 1.5em top;
   padding: 0 4em 0 23.5em;
   min-height: 22em;
+
+  & > form > fieldset,
+  & > .form-desc {
+    width: 100%;
+  }
 }
 
 .modal-login-header {
