OLMIS-1879: added highlighting column label input when is invalid

--- a/src/main/webapp/admin-template/template.scss
+++ b/src/main/webapp/admin-template/template.scss
@@ -44,6 +44,11 @@
 			.dndDraggingSource {
 			  	display: none;
 			}
+
+			.invalid {
+				background-color: lighten($red, 50%);
+	            border-color: $red;
+			}
 		}
 
 		.circle {
