--- a/src/main/webapp/openlmis-header/header.scss
+++ b/src/main/webapp/openlmis-header/header.scss
@@ -1,46 +1,50 @@
+body > header > :first-child {
+    box-shadow: 0 0 0.5em $shadow;
+    border-bottom: 0.1em solid lighten($cyan, 45%);
+    color: $dark-gray;
+    position: relative;
+    z-index: 1; // to be above navbar
+    background: linear-gradient(to top, $light-gray 0%, lighten($light-gray, 40%) 80%, $white 100%);
 
-body>header>:first-child {
-  box-shadow: 0 0 0.5em $shadow;
-  border-bottom: 0.1em solid lighten($cyan, 45%);
-  color: $dark-gray;
-  position: relative;
-  z-index: 1; // to be above navbar
-  background: linear-gradient(to top, $light-gray 0%, lighten($light-gray, 40%) 80%, $white 100%);
-  &.isOffline {
-    background: #dddddd;
-  }
+    &.isOffline {
+        background: #dddddd;
+    }
 }
 
-body > header > :first-child > *{
-  display: flex;
-  align-items: flex-end;
-  width: 100%;
-  .logo{
-    display: block;
-    flex: 1 0 auto;
-  }
-  & > * {
-    flex: 0 0 auto;
-    padding: 0em 1em;
-  }
+body > header > :first-child > * {
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+
+    .logo {
+        display: block;
+        flex: 1 0 auto;
+    }
+
+    & > * {
+        flex: 0 0 auto;
+        padding: 0 1em;
+    }
 }
 
 .logo {
-  padding: 0.6em 0 0;
-  img {
-    float: left;
-    margin: 0 0 0 0.8em;
-  }
-  h1 {
-    float: left;
-    clear: none;
-    font-size: 2em;
-    font-weight: normal;
-    font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
-    line-height: 1.1em;
-    margin: 0.35em 0 0 0.35em;
-    color: $gray;
-    text-shadow: 0 0.05em 0 $white;
-    border-color: transparent;
-  }
+    padding: 0.6em 0 0;
+
+    img {
+        float: left;
+        margin: 0 0 0 0.8em;
+    }
+
+    h1 {
+        float: left;
+        clear: none;
+        font-size: 2em;
+        font-weight: normal;
+        font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
+        line-height: 1.1em;
+        margin: 0.35em 0 0 0.35em;
+        color: $gray;
+        text-shadow: 0 0.05em 0 $white;
+        border-color: transparent;
+    }
 }
