--- a/src/main/webapp/openlmis-header/header.scss
+++ b/src/main/webapp/openlmis-header/header.scss
@@ -6,8 +6,14 @@ body > header > :first-child {
     z-index: 1; // to be above navbar
     background: linear-gradient(to top, $light-gray 0%, lighten($light-gray, 40%) 80%, $white 100%);
 
-    &.isOffline {
-        background: #dddddd;
+    &.is-offline {
+        background: $dark-gray;
+        border-color: black;
+        color: $white;
+
+        .logo > h1 {
+            color: $white;
+        }
     }
 }
 
