--- a/src/main/webapp/requisition-status-messages/status-messages.scss
+++ b/src/main/webapp/requisition-status-messages/status-messages.scss
@@ -1,3 +1,51 @@
+.status-messages {
+    @extend .panel;
+    @extend .panel-default;
+
+    & > header {
+        @extend .panel-heading;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    & > .status-message-list {
+        @extend .panel-body;
+
+        & > * {
+            width: 100%;
+        }
+    }
+
+    & > footer {
+        @extend .panel-footer;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+
+.status-message {
+    width: 100%;
+
+    & > header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 0.25em;
+        border-bottom: 1px solid $light-gray;
+        padding-bottom: 0.25em;
+
+        & > .status {
+            font-weight: bold;
+        }
+
+        & > .date {
+            font-style: italic;
+        }
+    }
+
+    & + .status-message {
+        margin-top: 2em;
+    }
+}
 
 .status-message > input {
     &.btn-primary,
