--- a/src/main/webapp/requisition-status-messages/status-messages.scss
+++ b/src/main/webapp/requisition-status-messages/status-messages.scss
@@ -47,67 +47,6 @@
     }
 }
 
-.status-message > input {
-    &.btn-primary,
-    &.delete-button {
-        float: right;
-    }
-}
-
-.status-message {
-    padding: $padding2px;
-    margin-bottom: 1em;
-    display: block;
-    > textarea {
-        width: 100%;
-        height: 2.7em;
-    }
-}
-
-.status-header {
-    background: $light-gray;
-    > span {
-        font-weight: bold;
-        margin-left: 0.8em;
-    }
-    > input {
-        background: none;
-        border: none;
-        float: right;
-        text-decoration: underline;
-    }
-}
-
-.status-message aside {
-    @include clearfix();
-    margin-bottom: 1em;
-    @include box-shadow(0.2em 0.2em 0 $light-shadow);
-    border: 0.1em solid $medium-gray;
-    background: $very-light-gray;
-    text-shadow: 0 0.1em 0 white;
-	padding: 0em;
-    font-weight: normal;
-    width: 100%;
-    height: auto;
-    > dl {
-        display: block;
-        margin: 0.3em 0.3em 0.3em 0.8em;
-    }
-}
-
-.status-message > form {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: flex-end;
-    align-items: flex-end;
-    > * {
-        flex: 0 0 auto;
-        margin-right: 0.5em;
-        &:last-child {
-            margin-right: 0em;
-        }
-    }
-    > textarea {
-        flex-grow: 1;
-    }
+.bootbox-body > .status-message-list {
+    padding: 1.5em 0;
 }
