OLMIS-1924: Info will be displayed if there are no comments on the requisition screen

--- a/src/main/webapp/requisition-status-messages/status-messages.scss
+++ b/src/main/webapp/requisition-status-messages/status-messages.scss
@@ -50,3 +50,9 @@
 .bootbox-body > .status-message-list {
     padding: 1.5em 0;
 }
+
+.info-no-comments {
+    text-align: center;
+    color: $gray;
+    font-style: italic;
+}
