OLMIS-1959: Fixed non-js loading modal styles

--- a/src/main/webapp/openlmis-modal/loading-modal.scss
+++ b/src/main/webapp/openlmis-modal/loading-modal.scss
@@ -1,8 +1,9 @@
 .loading-modal {
-	.modal-dialog{
-    width: auto;
-    margin: auto auto;
-    flex-grow: 0;
+
+  .modal-dialog{
+      width: auto;
+      margin: auto auto;
+      flex-grow: 0;
   }
   .modal-body{
     @include clearfix();
@@ -28,17 +29,6 @@
   }
 }
 
-.no-js-loading-modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 7em;
-  height: 4em;
-  border-radius: 0.2em;
-  background: $white;
-  background-image: url('openlmis-modal/loading-modal.gif');
-  background-size: 2em;
-  background-repeat: no-repeat;
-  background-position: center center;
+.non-js-modal {
+  display: flex;
 }
