OLMIS-1808: Added flex dimentions to paginagtion so they render correctly

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
@@ -3,6 +3,13 @@
     display: flex;
     justify-content: space-between;
 
+    > * {
+        flex: 0 0 auto;
+        &:first-child {
+            flex-grow: 1;
+        }
+    }
+
     margin-bottom: $space-size;
     .pagination{
         margin: 0px;
