OLMIS-1808: Reorganized tbody table section titles

--- a/src/main/webapp/openlmis-table/openlmis-table-container.scss
+++ b/src/main/webapp/openlmis-table/openlmis-table-container.scss
@@ -65,7 +65,7 @@ the current table sort order is recommended.*
         <th>Unit of measure</th>
       </tr>
     </thead>
-    <tbody title="Anti-malarials">
+    <tbody>
       <tr>
         <td>
           <i class="icon-ok"/>
@@ -75,8 +75,6 @@ the current table sort order is recommended.*
         <td>300</td>
         <td>mg</td>
       </tr>
-    </tbody>
-    <tbody title="Anti-pyretics">
       <tr>
         <td class="center-justified">
           <i class="icon-ok"/>
